--- a/src/scss/DataTable.css
+++ b/src/scss/DataTable.css
@@ -2,10 +2,11 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
   min-width: 0; 
   height: 100%;
   /* border: 1px solid #524437; */
+  
 }
 .tableTitle{
   text-align: center;
@@ -15,13 +16,16 @@
   overflow-y: auto;
   overflow-x: auto;
   flex: 1;
+  border: 1px solid #524437;
+  box-shadow: 0 0 10px 5px rgba(82, 68, 55, 0.2);
+  border-radius: 5px;
 }
 .table {
   width: 100%; 
   border-collapse: collapse;
-  font-size: 12px;
+  font-size: 13px;
   text-align: left;
-  border: 1px solid #524437;
+  /* border: 1px solid #524437; */
 }
 .table thead th {
   position: sticky;
