--- a/src/scss/Map.css
+++ b/src/scss/Map.css
@@ -1,27 +1,35 @@
 .mapContainer{
     display: flex;
-    height: 100%;
-    
+    height: 100%;    
 }
 .mapButtons{
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     justify-content: center;
-    width: 200px;  
-    gap: 10px;
-    padding-left: 15px;     
+    width: 250px;
+    height: 150px;  
+    gap: 10px;      
+    margin-bottom: 20px;        
+}
+.mapControls{
+    display: flex;
+    flex-direction: column;  
 }
 .mapArea{
     flex: 1;               
     display: flex;         
     justify-content: center; 
-    align-items: center;     
-    /* border: 1px solid red; */
+    align-items: center;
+}
+.mapWarnings{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .mapleaflet{
     height: 480px;
     width: 800px;
     border: 1px solid #40362D;
-
+    box-shadow: 0 0 10px 5px rgba(82, 68, 55, 0.2);
 }
