--- a/src/scss/RecordsTable.css
+++ b/src/scss/RecordsTable.css
@@ -35,12 +35,12 @@
   border-bottom: 1px solid #524437;
   display: flex;
   align-items: center;
-  margin: 5px 15px;
+  margin: 5px 18px;
   padding: 5px 0;
   transition: font-size 0.2s ease, transform 0.2s ease;
 }
 .datarow:hover{
-  font-size: larger;
+  font-size: 18px;
   cursor: pointer;
   transition: font-size 0.2s ease, transform 0.2s ease;
 }
@@ -49,7 +49,7 @@
   display: flex;
   align-items: center;
   margin: 5px 15px;
-  font-size: larger;
+  font-size: 18px;
   background-color: #C9AF7F;
   border-radius: 5px;
   padding: 5px 0;
@@ -68,6 +68,6 @@
     height: 40px;
     margin:5px;
     cursor: not-allowed;
-    pointer-events: none; /* blokuje hover, klikání atd. */
+    pointer-events: none; 
 }
 
